fix: Fix property filter token padding alignment when page-wide list styling is present

--- a/src/internal/components/token-list/styles.scss
+++ b/src/internal/components/token-list/styles.scss
@@ -42,7 +42,8 @@
 }
 
 .list-item {
-  /* used in test-utils */
+  padding: 0;
+  margin: 0;
 }
 
 .toggle-container-inline {
